[package]
name = "akafugu_twidisplay-async"
version = "0.1.0"
authors = ["Michal Lasak <nebelgrau77@gmail.com>"]
edition = "2021"
description = "A platform agnostic Rust driver for the Akafugu TWIDisplay."
documentation = "https://docs.rs/akafugu_twidisplay"
readme = "README.md"
homepage = "https://www.akafugu.jp/posts/products/twidisplay/"
repository = "https://github.com/nebelgrau77/akafugu_twidisplay-rs.git"
license = "MIT OR Apache-2.0"
keywords = ["akafugu", "twidisplay", "lcd", "driver", "embedded-hal-driver", "async"]
categories = ["embedded", "hardware-support", "no-std", "async"]

include = [
    "**/*.rs",
    "/Cargo.toml",
    "/CHANGELOG.md",
    "/README.md",
    "/LICENSE-MIT",
    "/LICENSE-APACHE",
    ]

[badges]
maintenance = { status = "actively-developed" }

[dependencies]
embedded-hal-async = "1.0.0"

[profile.release]
lto = true
