[package]
name = "rp2350-akafugu"
version = "0.1.0"
edition = "2021"

[dependencies]
cortex-m = "0.7.6"
cortex-m-rt = "0.7.3"
defmt = "1.0.1"

embassy-executor = { version = "0.7.0", features = [
  "arch-cortex-m",
  "executor-thread",
  "defmt",
  "executor-interrupt",
  "task-arena-size-20480"
] }
defmt-rtt = "1.1.0"
panic-probe = { version = "1.0.0" }
embassy-time = { version = "0.5.0", features = [
    "defmt",
    "defmt-timestamp-uptime",
] }
embassy-rp = { version = "0.6.0", features = [
  "defmt",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
  "unstable-pac"
] }

embassy-sync = { version = "0.7.2", features = ["defmt"] }

akafugu_twidisplay-async = {path = '../..'}